<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">自动呼叫器</string>
    <string name="action_settings">清除缓存</string>
    <string name="configurationName">Configuration: N/A</string>
    <string name="testingCaseName">Now you can initial the test by start button </string>
    <string name="statisticRowName">统计结果</string>
    <string name="indexName">Id</string>
    <string name="caseName"> </string>
    <string name="passName">成功</string>
    <string name="failName">失败</string>
    <string name="detailName">详情</string>
    <string name="fristIndex">1</string>
    <string name="secondIndex">2</string>
    <string name="thirdIndex">3</string>
    <string name="fourthIndex">4</string>
    <string name="fifthIndex">5</string>
    <string name="sixthIndex">6</string>
    <string name="seventhIndex">7</string>
    <string name="eighthIndex">8</string>
    <string name="ninthIndex">9</string>
    <string name="tenthIndex">10</string>
    <string name="eleventhIndex">11</string>
    <string name="twelthIndex">12</string>
    <string name="zero">0</string>
    <string name="mo_tc_name">本地呼叫</string>
    <string name="ping_tc_name">ping</string>
    <string name="browser_tc_name">webBrowser</string>
    <string name="sms_tc_name">sms</string>
    <string name="upload_tc_name">upload</string>
    <string name="download_tc_name">download</string>
    <string name="oos_tc_name">oos</string>
    <string name="startTestButtonName">开始呼叫</string>
    <string name="configurationButtonName">Configuration</string>
    <string name="stopTestButtonName">停止呼叫</string>
    <string name="cancelConfigurationButtonName">Cancle</string>
    <string name="saveConfigurationButtonName">Save</string>
    <string name="sim1Name">SIM1 Number</string>
    <string name="sim2Name">SIM2 Number</string>
    <string name="inputPhoneNumberPrompt">Please input the phone number</string>
    <string name="autoAnswer">Auto answer all call </string>
    <string name="autoReset">Automatic reset after aseert </string>

    <!--- AutoDialer新加字段 -->
    <string name="about">关于我们</string>
    <string name="author">开发者：方晖</string>
    <string name="version">版本号: </string>
    <string name="release_date">发布日期: </string>
    <string name="history">历史版本</string>
    <string name="feature">
    2018/05/22\n每个号码仅呼叫一次\n\n
    2018/01/12\n增加关于页\n\n
    2017/07/14\n不能判断对方是否接听，所以连续拨两次，每次呼叫时长30s。\n
    </string>
</resources>
