<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="marvell.android.telephony.ConfigureActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/enableAutoAnswerCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoAnswer"
            android:visibility="gone" >
        </CheckBox>

        <CheckBox
            android:id="@+id/enableAutoResetCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoReset" >
        </CheckBox>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim1Name" >
            </TextView>

            <EditText
                android:id="@+id/sim1NumberEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:freezesText="true"
                android:inputType="number"
                android:maxLength="11" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sim2Name" >
            </TextView>

            <EditText
                android:id="@+id/sim2NumberEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:freezesText="true"
                android:inputType="number"
                android:maxLength="11" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelConfigurationButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelConfigurationButtonName" />

        <Button
            android:id="@+id/saveConfigurationButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saveConfigurationButtonName" />
    </LinearLayout>

</LinearLayout>